<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:orientation="horizontal"
        android:rowCount="17"
        android:useDefaultMargins="true" >

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_gravity="center"
            android:text="@string/time_default"
            android:layout_columnSpan="2"/>


        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start" />

        <Spinner
            android:id="@+id/spn_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/acc_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_x_label" />

        <TextView
            android:id="@+id/acc_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/acc_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_y_label" />

        <TextView
            android:id="@+id/acc_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/acc_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_z_label" />

        <TextView
            android:id="@+id/acc_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/rotvec_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotvec_x_label" />

        <TextView
            android:id="@+id/rotvec_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/rotvec_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotvec_y_label" />

        <TextView
            android:id="@+id/rotvec_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/rotvec_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotvec_z_label" />

        <TextView
            android:id="@+id/rotvec_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/grav_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_x_label" />

        <TextView
            android:id="@+id/grav_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/grav_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_y_label" />

        <TextView
            android:id="@+id/grav_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/grav_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_z_label" />

        <TextView
            android:id="@+id/grav_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/linacc_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linacc_x_label" />

        <TextView
            android:id="@+id/linacc_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/linacc_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linacc_y_label" />

        <TextView
            android:id="@+id/linacc_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/linacc_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linacc_z_label" />

        <TextView
            android:id="@+id/linacc_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/gyro_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_x_label" />

        <TextView
            android:id="@+id/gyro_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/gyro_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_y_label" />

        <TextView
            android:id="@+id/gyro_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/gyro_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_z_label" />

        <TextView
            android:id="@+id/gyro_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />


    </GridLayout>

</RelativeLayout>